<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Web3jActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_etherium_wallet"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_create_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/create_wallet" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/your_address_will_be_shown_here"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="30dp"
                        android:background="@android:color/holo_blue_bright" />

                    <TextView
                        android:id="@+id/text_node"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/connect_to_etherium_network"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/btn_connect"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:text="@string/connect" />


                        <Button
                            android:id="@+id/btn_check_balance"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/check_balance" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_gas_fee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/gasFee"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/balance"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/primary_text_dark" />

                    <TextView
                        android:id="@+id/text_etherium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/send_etherium"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ethvalue"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:hint="@string/enter_eth_value_to_send"
                        android:inputType="numberDecimal"
                        android:textColorHint="#757575" />

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/send" />

                </LinearLayout>
            </ScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
